--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,7 +1,7 @@
 {% for result in results %}
 <tr>
     <td>{{ result.product_name }}</td>
-    <td>{{ result.product_price }}</td>
+    <td>{{ result.product_price_in_euros }}</td>
     <td><a href="{{ result.url }}">{{ result.url }}</a></td>
 </tr>
 {% endfor %}
