update last day

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -10,8 +10,8 @@
     <td> <img src="https://cms-images.mmst.eu/nzwrdbjwhn3t/6cwHfvZ5JSc52H8OL8adTp/45ee39fcbaf8642773e0c42ee2419c80/MediaMarkt-logo.png?q=80" width=300px height=300px> </td>
     {% endif %}
 
-    <td>{{ result.product_name }}</td>
-    <td>{{ result.product_price }}</td>
-    <td><a href="{{ result.url }}" class = "button is-primary"> Link to website </a></td>
+    <td><font size="+2">{{ result.product_name }}</font></td>
+    <td><font size="+2">{{ result.product_price }}</font></td>
+    <td><a href="{{ result.url }}" class = "button is-primary"><font size="+2"> Link to website </font></a></td>
 </tr>
 {% endfor %}
